[gd_scene load_steps=23 format=3 uid="uid://da061uuyq202m"]

[ext_resource type="Script" path="res://scenes/weapons/enemy_stinger_shot/enemy_stinger_shot.gd" id="1_wuybf"]
[ext_resource type="PackedScene" uid="uid://cltyyd03qhp1x" path="res://scenes/components/projectile_component/projectile_component.tscn" id="2_jbppq"]
[ext_resource type="Texture2D" uid="uid://lgnkc1ccqku" path="res://assets/sprites/shots/stinger_shot.png" id="3_q5lyj"]
[ext_resource type="PackedScene" uid="uid://ddwtfhud2pam6" path="res://scenes/components/hitbox_component/hitbox_component.tscn" id="4_ietbd"]
[ext_resource type="AudioStream" uid="uid://dfs6c76mpcgk4" path="res://assets/audios/hits/kick_soft_jab_impact_03.wav" id="5_wyw7q"]
[ext_resource type="AudioStream" uid="uid://dri0tya08krt" path="res://assets/audios/shots/retro_laser_gun_shoot_33.wav" id="6_6dbha"]
[ext_resource type="AudioStream" uid="uid://cic8tlt7mnvyi" path="res://assets/audios/blocked/knife_hit_small_05.wav" id="7_e1r06"]
[ext_resource type="Texture2D" uid="uid://b12u6tg2a0hst" path="res://assets/sprites/vfx/explosions/explosion-a.png" id="8_kay2h"]
[ext_resource type="AudioStream" uid="uid://dh1x4qmkoywop" path="res://assets/audios/explosions/retro_explosion_general_08.wav" id="9_ci752"]
[ext_resource type="PackedScene" uid="uid://ck7kxf20vxak4" path="res://scenes/components/time_disappear_component/time_disappear_component.tscn" id="10_ufab1"]

[sub_resource type="Animation" id="Animation_mdgm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StuckSwitchArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ExplodeHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ExplodeParticles:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ExplodeSE:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ualya"]
resource_name = "flying"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StuckSwitchArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExplodeHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_l81si"]
resource_name = "hit"
length = 0.2
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StuckSwitchArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2a3l5"]
resource_name = "stuck"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StuckSwitchArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExplodeHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_k043m"]
resource_name = "stuck_explode"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StuckSwitchArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.732043, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.160784, 0.160784, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ExplodeHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ExplodeParticles:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ExplodeSE:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2f8kg"]
_data = {
"RESET": SubResource("Animation_mdgm5"),
"flying": SubResource("Animation_ualya"),
"hit": SubResource("Animation_l81si"),
"stuck": SubResource("Animation_2a3l5"),
"stuck_explode": SubResource("Animation_k043m")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_a4sbe"]
radius = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmdhg"]
size = Vector2(16, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_ue5hh"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n7glb"]
radius = 13.0384

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mn3ev"]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0rgvp"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="EnemyStingerShot" type="StaticBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource("1_wuybf")

[node name="ProjectileComponent" parent="." instance=ExtResource("2_jbppq")]
speed = 250.0
auto_rotation = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2f8kg")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_q5lyj")
hframes = 9
frame = 4

[node name="StuckSwitchArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="StuckSwitchArea"]
shape = SubResource("CircleShape2D_a4sbe")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_rmdhg")

[node name="TerrainRayCast" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(8, 0)
collision_mask = 129

[node name="HitboxComponent" parent="." instance=ExtResource("4_ietbd")]
collision_layer = 16
collision_mask = 2
damage = 2
oneshot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_ue5hh")
disabled = true
debug_color = Color(0.819608, 0.364706, 0.447059, 0.419608)

[node name="ExplodeHitbox" parent="." instance=ExtResource("4_ietbd")]
collision_layer = 16
collision_mask = 2
damage = 2
oneshot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplodeHitbox"]
shape = SubResource("CircleShape2D_n7glb")
disabled = true
debug_color = Color(0.819608, 0.364706, 0.447059, 0.419608)

[node name="HitSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wyw7q")
volume_db = -23.11
pitch_scale = 3.05
bus = &"SE"

[node name="ShootSE" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_6dbha")
volume_db = -24.867
bus = &"SE"

[node name="BlockedSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_e1r06")
bus = &"SE"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(3.6, 3.6)

[node name="ExplodeParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_mn3ev")
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_0rgvp")
texture = ExtResource("8_kay2h")
lifetime = 0.5
one_shot = true

[node name="ExplodeSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ci752")
volume_db = -23.363
pitch_scale = 1.2
bus = &"SE"

[node name="TimeDisappearComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("10_ufab1")]
wait_time = 10.0
sprite = NodePath("../Sprite2D")
auto_start = true

[connection signal="body_entered" from="StuckSwitchArea" to="." method="_on_stuck_switch_area_body_entered"]
[connection signal="blocked" from="HitboxComponent" to="." method="_on_hitbox_component_blocked"]
[connection signal="hit" from="HitboxComponent" to="." method="_on_hitbox_component_hit"]
[connection signal="blocked" from="ExplodeHitbox" to="." method="_on_hitbox_component_blocked"]
[connection signal="hit" from="ExplodeHitbox" to="." method="_on_hitbox_component_hit"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="TimeDisappearComponent" to="." method="_on_time_disappear_component_timeout"]
